feat! add writing part